--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -25,3 +25,6 @@
 @import 'blocks/download'
 // Импорт стилей подвала сайта
 @import 'blocks/footer'
+
+// мобильное меню
+@import 'blocks/menu-mobile'
