--- a/src/sass/blocks/_download.sass
+++ b/src/sass/blocks/_download.sass
@@ -42,3 +42,34 @@
     
   &__subtitle 
     color: $text-color
+
+@media (max-width: 1300px)
+  .download
+    &-button 
+      width: 320px
+    &__icon 
+      width: 80px
+      height: 80px
+    &-content 
+      padding: 18px 18px
+      padding-right: 5px
+
+@media (max-width: 1150px)
+  .download
+    padding-bottom: 90px
+    &__buttons 
+      flex-wrap: wrap
+      justify-content: space-around
+    &-button 
+      margin-bottom: 30px
+
+@media (max-width: 952px)
+  .download
+    padding-bottom: 50px
+    &__title 
+      margin-bottom: 50px
+
+@media (max-width: 360px)
+  .download
+    &-button 
+      width: 300px
