--- a/src/sass/blocks/_feedback.sass
+++ b/src/sass/blocks/_feedback.sass
@@ -22,12 +22,15 @@
   &-card 
     display: flex
     flex-direction: column
+    align-items: center
+    justify-content: center
     max-width: 360px
+    min-height: 273px
     background-color: $background-color
     padding: 40px
     padding-right: 20px
     outline: none
-    margin-right: 30px
+    margin: 0 15px 
     margin-bottom: 50px
 
   &__text 
@@ -64,3 +67,50 @@
       left: -90px
     &_right
       right: -90px
+
+@media (max-width: 1300px)
+  .feedback 
+    &__arrows 
+      &_left
+        left: -60px
+      &_right
+        right: -60px
+
+@media (max-width: 952px)
+  .feedback 
+    padding-bottom: 0
+    &__subtitle 
+      margin-bottom: 50px
+    &__arrows 
+      &_left, &_right
+        background: linear-gradient(to right, $gradient-color-1, $gradient-color-2)
+        color: $light-text-color
+      &_left
+        left: -50px
+      &_right
+        right: -50px
+
+@media (max-width: 620px)
+  .feedback 
+    padding-bottom: 0
+    &-wrap 
+      padding-bottom: 80px
+    &__arrows
+      &_left
+        z-index: 1000
+        top: auto
+        left: 120px
+        bottom: 30px
+      &_right
+        right: 120px
+        top: auto
+        bottom: 30px
+        z-index: 1000
+
+@media (max-width: 360px)
+  .feedback 
+    &__arrows
+      &_left
+        left: 90px
+      &_right
+        right: 90px
