--- a/src/sass/blocks/_footer.sass
+++ b/src/sass/blocks/_footer.sass
@@ -18,3 +18,18 @@
         color: $light-text-color
   &__copyright 
     margin-top: 30px
+
+@media (max-width: 952px)
+  .footer 
+    padding: 40px
+
+@media (max-width: 620px)
+  .footer 
+    &__copyright 
+      text-align: center
+
+@media (max-width: 360px)
+  .footer 
+    padding: 20px
+    &__copyright 
+      margin-top: 15px
