--- a/src/sass/blocks/_package.sass
+++ b/src/sass/blocks/_package.sass
@@ -8,6 +8,7 @@
 
   &__title 
     margin-bottom: 23px
+    text-align: center
 
   &__subtitle 
     max-width: 656px
@@ -39,7 +40,6 @@
       width: 100%
       text-align: center
       padding-top: 30px
-      // padding-bottom: 53px
       padding-bottom: 35px
       position: relative
       &:before
@@ -58,22 +58,6 @@
         border-style: solid
         border-width: 0 0 40px 133px
         border-color: transparent transparent $background-color transparent
-      // &:after 
-      //   content: ''
-      //   position: absolute
-      //   left: 0
-      //   bottom: 0
-      //   height: 40px 
-      //   width: 131px
-      //   background: linear-gradient(to left bottom, transparent 50%, $background-color 50%) no-repeat
-      // &:before 
-      //   content: ''
-      //   position: absolute
-      //   right: 0
-      //   bottom: 0
-      //   height: 40px 
-      //   width: 131px
-      //   background: linear-gradient(to right bottom, transparent 50%, $background-color 50%) no-repeat
     &-list 
       display: flex
       flex-direction: column
@@ -97,3 +81,39 @@
       border-radius: 20px
       border: 1px solid $border-color
       font-weight: 500
+
+@media (max-width: 1150px)
+  .package 
+    &-wrap 
+      padding-bottom: 90px
+    &-cards
+      flex-wrap: wrap
+      justify-content: space-around
+    &-card 
+      margin-right: 0px
+      margin-bottom: 30px
+      &__price 
+        margin-bottom: 20px
+      &-list 
+        display: none
+
+@media (max-width: 952px)
+  .package 
+    &-wrap 
+      padding-bottom: 50px
+    &__subtitle 
+      margin-bottom: 50px
+    &-card
+      &__price 
+        background: linear-gradient(to right, $gradient-color-1, $gradient-color-2)
+        color: $light-text-color
+        &:after
+          border-color: transparent transparent $background-color transparent
+        &:before
+          border-color: transparent transparent transparent $background-color
+      &__button 
+        background: linear-gradient(to right, $gradient-color-1, $gradient-color-2)
+        color: $light-text-color
+
+
+
