сборка gulp. menu burger. адаптив.

--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -23,6 +23,8 @@
     position: absolute
     top: 219px
     width: 500px
+  &-nav 
+    z-index: 1000
   &-burger 
     display: none
     outline: none
