--- a/src/sass/blocks/_video.sass
+++ b/src/sass/blocks/_video.sass
@@ -13,6 +13,7 @@
     height: 400px
     z-index: 20
     cursor: pointer
+    object-fit: cover
   &-play
     display: flex
     justify-content: center
