--- a/src/css/style.css
+++ b/src/css/style.css
@@ -347,6 +347,10 @@ template {
           box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
@@ -841,6 +845,10 @@ a {
   position: absolute;
   top: 219px;
   width: 500px;
+}
+
+.header-nav {
+  z-index: 1000;
 }
 
 .header-burger {
@@ -1660,6 +1668,8 @@ a {
   height: 400px;
   z-index: 20;
   cursor: pointer;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .video-play {
@@ -1739,11 +1749,11 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   max-width: 360px;
-  min-height: 273px;
+  min-height: 280px;
   background-color: #f7fafc;
   padding: 40px;
   padding-right: 20px;
@@ -1807,6 +1817,9 @@ a {
 }
 
 @media (max-width: 1300px) {
+  .feedback-card {
+    padding: 30px;
+  }
   .feedback__arrows_left {
     left: -60px;
   }
@@ -1819,6 +1832,9 @@ a {
   .feedback {
     padding-bottom: 0;
   }
+  .feedback-card {
+    padding: 20px;
+  }
   .feedback__subtitle {
     margin-bottom: 50px;
   }
@@ -1828,17 +1844,16 @@ a {
     color: #ffffff;
   }
   .feedback__arrows_left {
+    top: 55%;
     left: -50px;
   }
   .feedback__arrows_right {
+    top: 55%;
     right: -50px;
   }
 }
 
 @media (max-width: 620px) {
-  .feedback {
-    padding-bottom: 0;
-  }
   .feedback-wrap {
     padding-bottom: 80px;
   }
@@ -2055,7 +2070,7 @@ a {
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.75);
+  background-color: rgba(0, 0, 0, 0.85);
   z-index: 2;
   display: none;
   -webkit-animation: fadeIn 0.5s;
