--- a/src/sass/blocks/_feedback.sass
+++ b/src/sass/blocks/_feedback.sass
@@ -23,9 +23,9 @@
     display: flex
     flex-direction: column
     align-items: center
-    justify-content: center
+    justify-content: space-between
     max-width: 360px
-    min-height: 273px
+    min-height: 280px
     background-color: $background-color
     padding: 40px
     padding-right: 20px
@@ -70,15 +70,24 @@
 
 @media (max-width: 1300px)
   .feedback 
+    &-card 
+      padding: 30px
     &__arrows 
       &_left
         left: -60px
       &_right
         right: -60px
 
+// @media (max-width: 1009px)
+//   .feedback 
+//     &-card 
+//       margin: 0 30px 
+
 @media (max-width: 952px)
   .feedback 
     padding-bottom: 0
+    &-card 
+      padding: 20px
     &__subtitle 
       margin-bottom: 50px
     &__arrows 
@@ -86,13 +95,14 @@
         background: linear-gradient(to right, $gradient-color-1, $gradient-color-2)
         color: $light-text-color
       &_left
+        top: 55%
         left: -50px
       &_right
+        top: 55%
         right: -50px
 
 @media (max-width: 620px)
   .feedback 
-    padding-bottom: 0
     &-wrap 
       padding-bottom: 80px
     &__arrows
