--- a/src/sass/blocks/_download.sass
+++ b/src/sass/blocks/_download.sass
@@ -34,6 +34,9 @@
     border-radius: 3px
     font-size: 56px
     // text-shadow: -3px 0 rgba(0, 0, 0, 0.1), 0 3px rgba(0, 0, 0, 0.1), 3px 0 rgba(0, 0, 0, 0.1), 0 -3px rgba(0, 0, 0, 0.1)
+
+  &__svg
+    fill: $text-color
   
   &-content 
     display: flex
