--- a/src/css/style.css
+++ b/src/css/style.css
@@ -475,6 +475,9 @@ a {
   .download-button:hover {
     cursor: pointer;
   }
+  .download-button:hover .download__svg {
+    fill: url(#gradient);
+  }
   .download-button:hover .download__icon i {
     background: -webkit-gradient(linear, left top, right top, from(#fd712c), to(#f21780));
     background: linear-gradient(to right, #fd712c, #f21780);
@@ -1937,6 +1940,10 @@ a {
   background-color: #f7fafc;
   border-radius: 3px;
   font-size: 56px;
+}
+
+.download__svg {
+  fill: #777777;
 }
 
 .download-content {
